--- a/block-templates/front-page.html
+++ b/block-templates/front-page.html
@@ -1,17 +1,25 @@
 <!-- wp:html -->
-<div class="WP_DEBUG">wizzie front-page.html</div>
+<div class="WP_DEBUG">Wizzie front-page.html</div>
 <!-- /wp:html -->
 
-<!-- wp:template-part{ "slug":"issue-39", "theme":"fizzie" } /-->
+<!-- wp:template-part {"slug":"header","theme":"wizzie","tagName":"header","align":"full"} /-->
 
-<!-- wp:template-part {"slug":"header", "align":"full", "tagName":"header" } /-->
+<!-- wp:woocommerce/featured-product {"editMode":false,"productId":69011} -->
+<!-- wp:button {"align":"center"} -->
+<div class="wp-block-button aligncenter"><a class="wp-block-button__link" href="https://woocommerce.wp.a2z/product/my-favourite-block-annotated/">Shop now</a></div>
+<!-- /wp:button -->
+<!-- /wp:woocommerce/featured-product -->
 
-<!-- wp:template-part {"slug":"page-content", "align":"wide","layout":{"inherit":true} } /-->
+<!-- wp:template-part {"slug":"product-categories","theme":"wizzie","style":{"spacing":{"padding":{"top":"20px","right":"20px","bottom":"20px","left":"20px"}}},"backgroundColor":"very-light-gray","layout":{"inherit":false,"contentSize":"1240px"}} /-->
 
-<!-- wp:template-part {"slug":"search","theme":"fizzie","layout":{"inherit": true }} /-->
+<!-- wp:template-part {"slug":"page-content","theme":"wizzie","align":"wide","layout":{"inherit":true}} /-->
 
-<!-- wp:template-part {"slug":"page-footer","theme":"fizzie", "tagName":"footer","layout":{"inherit": true }} /-->
+<!-- wp:template-part {"slug":"customer-reviews","theme":"wizzie","tagName":"section"} /-->
 
-<!-- wp:template-part {"slug":"footer","theme":"fizzie"} /-->
+<!-- wp:template-part {"slug":"search","theme":"wizzie","layout":{"inherit":true}} /-->
 
-<!-- wp:template-part {"slug":"footer-menu","theme":"fizzie", "className": "footer-menu" } /-->
+<!-- wp:template-part {"slug":"page-footer","theme":"wizzie","tagName":"footer","layout":{"inherit":true}} /-->
+
+<!-- wp:template-part {"slug":"footer","theme":"wizzie"} /-->
+
+<!-- wp:template-part {"slug":"footer-menu","theme":"wizzie","className":"footer-menu"} /-->
