Rename templates and add debug info #1

--- a/block-templates/page-checkout.html
+++ b/block-templates/page-checkout.html
@@ -1,3 +1,6 @@
+<!-- wp:html -->
+<div class="WP_DEBUG">Wizzie page-checkout.html</div>
+<!-- /wp:html -->
 <!-- wp:template-part {"slug":"header","theme":"wizzie","backgroundColor":"background"} /-->
 
 <!-- wp:post-title {"textAlign":"center"} /-->
