--- a/block-templates/page-cart.html
+++ b/block-templates/page-cart.html
@@ -1,14 +1,8 @@
 <!-- wp:html -->
-<div class="WP_DEBUG">Wizzie single-product.html</div>
+<div class="WP_DEBUG">Wizzie page-cart.html</div>
 <!-- /wp:html -->
 
 <!-- wp:template-part {"slug":"header","theme":"wizzie","backgroundColor":"background"} /-->
-
-<!-- wp:post-title {"textAlign":"center"} /-->
-
-<!-- wp:separator -->
-<hr class="wp-block-separator"/>
-<!-- /wp:separator -->
 
 <!-- wp:post-content {"layout":{"inherit":true}} /-->
 
