--- a/block-templates/page-my-account.html
+++ b/block-templates/page-my-account.html
@@ -1,3 +1,7 @@
+<!-- wp:html -->
+<div class="WP_DEBUG">Wizzie page-my-account.html</div>
+<!-- /wp:html -->
+
 <!-- wp:template-part {"slug":"header","theme":"wizzie","backgroundColor":"background"} /-->
 
 <!-- wp:post-content {"layout":{"inherit":true}} /-->
