--- a/parts/page-footer.html
+++ b/parts/page-footer.html
@@ -8,9 +8,10 @@
       <!-- wp:site-tagline {"style":{"typography":{"lineHeight":"1"}},"fontSize":"small"} /--></div>
     <!-- /wp:column -->
 
-    <!-- wp:column -->
-    <div class="wp-block-column"><!-- wp:oik-bbw/wp {"g":"g"} /--></div>
-    <!-- /wp:column -->
+        <!-- wp:column -->
+        <div class="wp-block-column"><!-- wp:oik-bbw/wp {"v":true,"g":true} /-->
+        </div>
+        <!-- /wp:column -->
 
     <!-- wp:column -->
     <div class="wp-block-column"><!-- wp:shortcode -->
