--- a/parts/footer-menu.html
+++ b/parts/footer-menu.html
@@ -1,9 +1,9 @@
 <!-- wp:navigation {"overlayMenu":"never","layout":{"type":"flex","setCascadingProperties":"true","justifyContent":"center","orientation":"horizontal"}} -->
 
 <!-- wp:home-link {"label":"Home"} /-->
-<!-- wp:navigation-link {"label":"Blog","type":"page","url":"https://s.b/wp56/blog/","kind":"post-type","isTopLevelLink":true} /-->
-<!-- wp:navigation-link {"label":"Sitemap","type":"page","url":"https://s.b/wp56/sitemap","kind":"post-type","isTopLevelLink":true} /-->
-<!-- wp:navigation-link {"label":"Sites","type":"page","url":"https://s.b/wp56/sites","kind":"post-type","isTopLevelLink":true} /-->
+<!-- wp:navigation-link {"label":"Blog","type":"page","url":"https://s.b/wp56/blog/","isTopLevelLink":true} /-->
+<!-- wp:navigation-link {"label":"Sitemap","type":"page","url":"https://s.b/wp56/sitemap","isTopLevelLink":true} /-->
+<!-- wp:navigation-link {"label":"Sites","type":"page","url":"https://s.b/wp56/sites","isTopLevelLink":true} /-->
 
 <!-- wp:navigation-link {"label":"My account","url":"https://s.b/wp56/my-account/"} /-->
 
